This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

1.21.2 (UNRELEASED)
-------------------
Bug fixes:
 - gtk/apport-gtk.desktop.in: Also show in Unity. (LP: #803519)
 - apport-unpack: Fix crash on file errors.

Improvements:
 - hookutils.py: Add attach_mac_events() for reporting logs of MAC systems.
   Looks for AppArmor messages for now. Thanks Marc Deslauriers!

1.21.2 (2011-07-01)
-------------------
Improvements:
 - test/run: Check $PYTHON for using a different Python interpreter (such as
   "python3") for the tests.
 - generic hook: Don't report package installation failures due to segfaulting
   maintainer scripts. We want the actual crash report only. Thanks Brian
   Murray.
 - hookutils.py, attach_wifi(): Also include wpasupplicant logs. Thanks Mathieu
   Trudel-Lapierre!

Bug fixes:
 - backends/packaging-apt-dpkg.py: Fix crash introduced in 1.21.1's multiarch
   fixes.
 - report.py: Fix bug patterns to correctly match against compressed report
   fields.

1.21.1 (2011-06-20)
-------------------
Improvements:
 - data/general-hooks/generic.py: Also check for low space on /var. Thanks
   Brian Murray.
 - hookutils.py, attach_file() and attach_file_if_exists(): Add a new
   "overwrite" flag option. If not given, now default to overwriting an
   existing key, as this is usually what you need when attaching files
   (instead of attaching it several times with '_' appended to the keys). You
   can get the old behaviour by setting overwrite=False.

Bug fixes:
 - When showing the size of the full report, take the compressed size of binary
   values instead of their uncompressed size, as the crash db upload will use
   the compressed values.
 - backends/packaging-apt-dpkg.py: Fix for current dpkg with multiarch support.
 - test/run: Fix the test suite to run against the system installed libraries
   with current Python versions (2.6, 2.7) where __file__ does not work any